<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TabHost
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainTab">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/BCUcount"
                                android:textColor="@color/primeBlue" />

                            <TextView
                                android:id="@+id/count"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="1"
                                android:gravity="right"/>
                        </LinearLayout>

                        <Button
                            android:layout_width="150dp"
                            android:layout_height="30dp"
                            android:id="@+id/refreshMapBtn"
                            android:text="@string/refresh"
                            android:background="@color/primeBlue"
                            android:gravity="center"
                            android:textColor="@color/whiteTextPrtime"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:onClick="startCharge"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/list"
                            android:textColor="@color/primeBlue"
                            android:layout_marginBottom="10dp"/>
                        <ListView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="400dp"
                            android:id="@+id/mapList">

                        </ListView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="22dp"
                            android:text="@string/loginReq"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <android.support.v7.widget.AppCompatImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/logo"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/welcome"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:textColor="@color/primeBlue"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/account_name"
                                    android:textColor="@color/colorPrimary" />

                                <EditText
                                    android:id="@+id/account"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/password"
                                    android:textColor="@color/colorPrimary" />

                                <EditText
                                    android:id="@+id/password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textPassword"/>
                            </LinearLayout>
                            <Button
                                android:id="@+id/loginBtn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:background="@color/colorPrimary"
                                android:text="@string/login"
                                android:textColor="@color/whiteTextPrtime"
                                android:onClick="loginHandler"/>

                            <Button
                                android:id="@+id/registBtn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:layout_marginTop="20dp"
                                android:background="@color/warnPrime"
                                android:text="@string/regist"
                                android:textColor="@color/whiteTextPrtime"
                                android:onClick="registHandler"/>
                        </LinearLayout>
                    </LinearLayout>


                </FrameLayout>
            </LinearLayout>
        </TabHost>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>