<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rul" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/capacityTv"
                    android:textColor="@color/colorPrimary"
                    android:text="25%"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/charging"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/chargeLvl"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:clickable="false"
                android:max="10000"
                android:progress="2500" />


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="300dp"
                android:layout_above="@+id/seekBar1"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="300dp">

            </com.github.mikephil.charting.charts.LineChart>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/currentTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/seekBar1"
                    android:layout_alignParentRight="true"
                    android:text="@string/dash"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/voltageTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/seekBar2"
                    android:layout_alignParentRight="true"
                    android:text="@string/dash"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="10dp"
                    android:gravity="right" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>