<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TabHost
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainTab">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ListView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="400dp"
                            android:id="@+id/mapList">

                        </ListView>
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/refreshMapBtn"
                            android:text="@string/refresh"
                            android:background="@color/colorPrimary"
                            android:textColor="@color/whiteTextPrtime"
                            android:layout_marginTop="15dp"/>

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/needChargeBtn"
                            android:text="@string/needCharge"
                            android:background="@color/warnPrime"
                            android:textColor="@color/whiteTextPrtime"
                            android:layout_marginTop="15dp"
                            android:onClick="startCharge"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            >
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/capacity" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/capacityTv"
                                        android:textColor="@color/colorPrimary"
                                        android:text="25%"/>
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:id="@+id/isCharging"
                                        android:layout_height="wrap_content"
                                        android:textColor="@color/warnPrime"
                                        android:text="@string/unCharging"
                                        android:layout_marginLeft="10dp"/>

                                </LinearLayout>

                                <ProgressBar
                                    android:id="@+id/chargeLvl"
                                    style="?android:attr/progressBarStyleHorizontal"
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:clickable="false"
                                    android:max="10000"
                                    android:progress="2500" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="15dp"
                                        android:layout_marginRight="10dp"
                                        android:text="@string/current"/>

                                    <TextView
                                        android:id="@+id/currentTv"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignBottom="@+id/seekBar1"
                                        android:layout_alignParentRight="true"
                                        android:layout_marginBottom="15dp"
                                        android:layout_marginRight="10dp"
                                        android:textColor="@color/primeBlue"/>

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/voltage"
                                        android:gravity="right"
                                        android:layout_marginRight="10dp"
                                        android:layout_marginLeft="50dp"
                                        android:layout_marginBottom="15dp"/>

                                    <TextView
                                        android:id="@+id/voltageTv"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_alignBottom="@+id/seekBar2"
                                        android:layout_alignParentRight="true"
                                        android:layout_marginBottom="15dp"
                                        android:layout_marginRight="10dp"
                                        android:textColor="@color/primeBlue"/>
                                </LinearLayout>


                                <com.github.mikephil.charting.charts.LineChart
                                    android:id="@+id/chart1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:minHeight="300dp"
                                    android:layout_above="@+id/seekBar1"/>

                                <com.github.mikephil.charting.charts.LineChart
                                    android:id="@+id/chart2"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:minHeight="300dp">

                                </com.github.mikephil.charting.charts.LineChart>




                            </LinearLayout>

                        </ScrollView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <android.support.v7.widget.AppCompatImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/logo"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="欢迎使用"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:textColor="@color/primeBlue"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/account_name"
                                    android:textColor="@color/colorPrimary" />

                                <TextView
                                    android:id="@+id/account"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text=""
                                    android:gravity="right"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/mail"
                                    android:textColor="@color/colorPrimary" />

                                <TextView
                                    android:id="@+id/mail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="right"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/balance"
                                    android:textColor="@color/colorPrimary" />

                                <TextView
                                    android:id="@+id/balance"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="right"/>
                            </LinearLayout>

                            <Button
                                android:id="@+id/registBtn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:layout_marginTop="20dp"
                                android:background="@color/warnPrime"
                                android:text="@string/logout"
                                android:textColor="@color/whiteTextPrtime"
                                android:onClick="loginOut"/>
                        </LinearLayout>
                    </LinearLayout>


                </FrameLayout>
            </LinearLayout>
        </TabHost>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>